load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# gazelle:prefix github.com/attilaolah/ekat
gazelle(name = "gazelle")

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
)

go_library(
    name = "ekat_lib",
    srcs = [
        "latin.go",
        "municipalities.go",
    ],
    importpath = "github.com/attilaolah/ekat",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_net//html:go_default_library"],
)

go_binary(
    name = "ekat",
    embed = [":ekat_lib"],
    visibility = ["//visibility:public"],
)
