load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "labeller",
    srcs = [
        "ocr_captchas.go",
        "split_captchas.go",
    ],
    importpath = "github.com/attilaolah/ekat/labeller",
    visibility = ["//visibility:public"],
    deps = [
        "//proto",
        "@com_github_otiai10_gosseract//:go_default_library",
    ],
)
