load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "scrapers",
    srcs = ["municipalities.go"],
    importpath = "github.com/attilaolah/ekat/scrapers",
    visibility = ["//visibility:public"],
    deps = [
        "//latin",
        "//proto",
        "@com_github_gocolly_colly//:go_default_library",
    ],
)
