load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "scrapers",
    srcs = [
        "captchas.go",
        "municipalities.go",
        "municipalities_files.go",
        "streets.go",
        "streets_files.go",
    ],
    importpath = "github.com/attilaolah/cad-rs/scrapers",
    visibility = ["//visibility:public"],
    deps = [
        "//proto",
        "//text",
        "@com_github_gocolly_colly//:colly",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
