load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "fetch_municipalities",
    embed = [":fetch_municipalities_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "fetch_municipalities_lib",
    srcs = ["fetch_municipalities.go"],
    importpath = "github.com/attilaolah/ekat/cmd/fetch_municipalities",
    visibility = ["//visibility:private"],
    deps = ["//municipalities"],
)
